# four_ws_robot

./: Dockerfile  README.md  amcl_params.md  bashrc  four_ws_robot.code-workspace  how_to_launch_navigation  movebase_params.md  slam_gmapping_params.md  zshrc
docs/: DEVELOPMENT.md  global_costmap_params.md  hector_mapping_params.md  robot_localization_params.md
four_wheel_steering_controller/: four_wheel_steering_controller_plugins.xml  package.xml
four_ws_robot/: CMakeLists.txt  package.xml
four_ws_robot_control/: CMakeLists.txt  package.xml
four_ws_robot_control/config/: controller.yaml  four_wheel_steering_controller.yaml  gazebo_ros_control.yaml  swerve_steering_controller.yaml
four_ws_robot_control/launch/: robot_control.launch
four_ws_robot_description/: CMakeLists.txt  package.xml
four_ws_robot_software/: CMakeLists.txt  package.xml
four_ws_robot_software/config/amcl/: amcl_original.yaml  amcl_test.yaml
four_ws_robot_software/config/amcl_params/: amcl_params_test.yaml
four_ws_robot_software/config/costmap/costmap_common/: costmap_common_test.yaml
four_ws_robot_software/config/costmap/local_costmap/: local_costmap_original.yaml  local_costmap_test.yaml
four_ws_robot_software/config/costmap_params/costmap_common/: costmap_common_test.yaml
four_ws_robot_software/config/costmap_params/costmap_common_params/: costmap_common_params_original.yaml
four_ws_robot_software/config/costmap_params/global_costmap_params/: global_costmap_params_original.yaml  global_costmap_params_test.yaml
four_ws_robot_software/config/hector_mapping/: hector_mapping_default.yaml  hector_mapping_test.yaml
four_ws_robot_software/config/hector_mapping_params/: hector_mapping_params_test.yaml
four_ws_robot_software/config/movebase_params/: movebase_params_test.yaml
four_ws_robot_software/config/planner/global_planners/carrot_planner/: carrot_planner_original.yaml
four_ws_robot_software/config/planner_params/global_planners_params/navfn_planner_params/: navfn_planner_params_test.yaml
four_ws_robot_software/config/planner_params/local_planners_params/dwa_planner_params/: dwa_planner_params_test.yaml
four_ws_robot_software/config/planner_params/local_planners_params/trajectory_planner_params/: trajectory_planner_params_test.yaml
four_ws_robot_software/config/planner_params/recovery_behaviors_params/: recovery_behaviors_params_test.yaml
four_ws_robot_software/config/robot_localization/: ekf_global.yaml  ekf_gps_sim.yaml  ekf_local.yaml  ekf_sim.yaml  navsat_transform.yaml  navsat_transform_sim.yaml
four_ws_robot_software/config/robot_localization_params/: ekf_sim.yaml
four_ws_robot_software/config/rqt/rqt_multiplot/: ekf_global.xml  ekf_local.xml  gps.xml
four_ws_robot_software/config/rqt/rviz/: full_config.rviz
four_ws_robot_software/config/rtabmap_odom_params/: rtabmap_odom_params_default.yaml
four_ws_robot_software/config/rviz/: rviz_localization_view.rviz  rviz_mapping_view.rviz
four_ws_robot_software/config/slam_gmapping/: slam_gmapping_default.yaml  slam_gmapping_test.yaml
four_ws_robot_software/config/slam_gmapping_params/: slam_gmapping_params_test.yaml
four_ws_robot_software/config/twist_mux/: twist_mux.yaml
four_ws_robot_software/launch/: joy_control.launch  localization.launch  map_saver.launch  mapping.launch  navigation.launch  slam.launch  slam_gmapping.launch
four_ws_robot_software/launch/base/: amcl.launch  hector_mapping.launch  map_server.launch  move_base.launch  rtabmap_odom.launch  slam_gmapping.launch
four_ws_robot_software/launch/debug/: ekf_debug.launch
four_ws_robot_software/launch/drivers/: move_base.launch  robot_localization.launch  slam_gmapping.launch
four_ws_robot_software/launch/gazebo/: gazebo_start.launch  gz_localization.launch  gz_map_creation.launch  gz_navigation.launch  launch_simulation_for_localization.launch  launch_simulation_for_navigation.launch  sim_start.launch  simulation.launch  simulation_for_localization.launch  simulation_for_map_creation.launch  simulation_for_navigation.launch
four_ws_robot_software/maps/: four_ws_map.pgm  turtlebot3_house.pgm  turtlebot3_house.yaml  turtlebot3_stage_2.pgm  turtlebot3_stage_2.yaml  turtlebot3_stage_4.pgm  turtlebot3_stage_4.yaml
four_ws_robot_software/rviz/: full_config.rviz  localization.rviz  navigation.rviz  rviz_localization_view.rviz  rviz_navigation_view.rviz  rviz_slam_view.rviz  slam.rviz
four_ws_robot_software/scripts/: coord_analyzer.py  ground_truth_listener.py  map_saver.py  tf_map_base_footprint_listener.py
four_ws_robot_teleop/: CMakeLists.txt  package.xml
four_ws_robot_teleop/launch/: joy_teleop.launch  key_teleop.launch
four_ws_robot_teleop/scripts/: joy_teleop.py  key_teleop.py
four_ws_stage/: model.config  model.sdf
gazebo_models_worlds_collection/: CMakeLists.txt  package.xml
joy_controller/: CMakeLists.txt  package.xml
navigation_params/: CMakeLists.txt  package.xml
robot_launch/: CMakeLists.txt  package.xml
robot_launch/launch/: launch_navigation_simulation.launch  launch_simulation_for_localization.launch  launch_simulation_for_map_creation.launch  launch_simulation_for_navigation.launch
robot_launch/worlds/: stage.world
scripts/: build.sh  install_packages.sh  install_pkgs.sh  install_third_party.sh
slam_algorithm_comparasion/: CMakeLists.txt  package.xml
slam_algorithm_comparasion/hector_mapping/: ground_truth_listener.csv  tf_map_base_listener.csv
slam_algorithm_comparasion/hector_slam/: ground_truth_listener.csv
slam_algorithm_comparasion/scripts/: coord_analyzer.py  ground_truth_listener.py  tf_map_base_footprint_listener.py
slam_algorithm_comparasion/slam_gmapping/: ground_truth_listener.csv  tf_map_base_listener.csv
teleop/: CMakeLists.txt  package.xml
(+125 files in other folders)
