<?xml version="1.0"?>
<package>
    <name>four_ws_robot</name>
    <version>0.0.0</version>
    <description>
        The four_ws_robot metapackage that installs four_ws_robot_software and related packages.
    </description>
    <maintainer email="nlobazev@gmail.com">Nikita Lobazev</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>four_ws_robot_control</run_depend>
    <run_depend>four_ws_robot_description</run_depend>
    <run_depend>four_ws_robot_software</run_depend>

    <export>
        <metapackage/>
    </export>
</package>
