<?xml version="1.0"?>
<package format="2">

    <name>four_ws_robot_control</name>
    <version>0.0.0</version>
    <description>The four_ws_robot_control package</description>
    <maintainer email="robomania@todo.todo">robomania</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
