<?xml version="1.0"?>
<package format="2">

  <name>four_ws_robot_software</name>
  <version>1.0.0</version>
  <description>4WS robot simulation</description>
  <maintainer email="aaaa@gmail.com">Robot mania</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
