<?xml version="1.0"?>
<package format="2">

  <name>four_ws_robot_teleop</name>
  <version>0.0.0</version>
  <description>four_ws_robot_teleop</description>
  <maintainer email="robomania@todo.todo">robomania</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
