<?xml version="1.0"?>
<package format="2">
  <name>gazebo_models_worlds_collection</name>
  <version>0.0.0</version>
  <description>The gazebo_models_worlds_collection package</description>
  <maintainer email="nikita@todo.todo">nikita</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
  	<gazebo_ros gazebo_media_path="${prefix}"/>
    	<gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
