<?xml version="1.0"?>
<package>
  <name>robot_launch</name>
  <version>1.0.0</version>
  <description>4WS robot simulation</description>

  <maintainer email="aaaa@gmail.com">Robot mania</maintainer>
  <license>BSD</license>
  <author>Robot mania</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>fourth_robot_bringup</run_depend>
  <run_depend>fourth_robot_control</run_depend>
  <run_depend>fourth_robot_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>joy_twist</run_depend>
</package>
