<?xml version="1.0"?>
<package format="2">
  <name>slam_algorithm_comparasion</name>
  <version>0.0.0</version>
  <description>The slam_algorithm_comparasion package</description>
  <maintainer email="nikita@todo.todo">nikita</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export/>
</package>
